fix admin products container overflow

--- a/react-vite/src/components/Profile/Favorites/Favorites.module.css
+++ b/react-vite/src/components/Profile/Favorites/Favorites.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
+    height: 100%;
 }
