--- a/react-vite/src/components/Profile/Profile.module.css
+++ b/react-vite/src/components/Profile/Profile.module.css
@@ -1,12 +1,29 @@
+.profileContainer {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .profile {
-    max-width: 1200px;
+    width: 100%;
     height: 100%;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
     background-color: #f8f8f8;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
+    box-sizing: border-box;
+}
+
+.profileHome {
+    width: 100%;
+    height: 100vh;
 }
 
 .profileNotice {
@@ -73,5 +90,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
