--- a/react-vite/src/components/Profile/TransactionHistory/TransactionHistory.module.css
+++ b/react-vite/src/components/Profile/TransactionHistory/TransactionHistory.module.css
@@ -2,4 +2,6 @@
     color: #666;
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
